--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,229 +1,297 @@
 .pagename a
 {
-background: url(%%BannerImage%%);
-position: absolute;
-bottom: 0;
-height: 100px!important;
-left: 0;
-right: 0;
-float: left;
-background-position: 15px;
-z-index: 0;
+  background: url(%%BannerImage1-3%%);
+  background-size: 100%;
+  position: absolute;
+  bottom: 0;
+  height: 100px!important;
+  left: 0;
+  right: 0;
+  float: left;
+  background-position: 15px;
+  z-index: 0;
 }
 
 .redditname a
 {
-text-indent: -9000px;
+  text-indent: -9000px;
 }
 
-.tabmenu 
+.tabmenu
 {
-display: inline;
-float: left;
+  display: inline;
+  float: left;
 }
 
 #header-bottom-left
 {
-height: 100px;
+  height: 100px;
 }
 
 #header-bottom-left .tabmenu
 {
-position:absolute;
-left: 500px;
-bottom: 0;
-display: inline;
+  position:absolute;
+  left: 500px;
+  bottom: 0;
+  display: inline;
 }
 
-#header-img.default-header {
-position: absolute;
-width: 30px!important;
-bottom: 0;
-z-index: 1;
+#header-img.default-header
+{
+  position: absolute;
+  width: 30px!important;
+  left: .2em;
+  bottom: 0;
+  z-index: 1;
 }
-
-
-
 
 div.side div.spacer:nth-of-type(3)
 {
-background:url(%%CedarvilleUniversity%%) top center no-repeat;
-padding: 210px 0 0;
-margin-top: 10px;
+  background:url(%%CedarvilleUniversity%%) top center no-repeat;
+  padding: 210px 0 0;
+  margin-top: 10px;
 }
 
-
-
-
-div.RES-keyNav-activeElement, div.commentarea div.RES-keyNav-activeElement .md, div.commentarea div.RES-keyNav-activeElement.entry div.noncollapsed { background: transparent none !important;
+div.RES-keyNav-activeElement, div.commentarea div.RES-keyNav-activeElement .md, div.commentarea div.RES-keyNav-activeElement.entry div.noncollapsed
+{
+  background: transparent none !important;
 }
 
-body, .side, .titlebox form.toggle, .leavemoderator, .icon-menu a, .side .spacer{ background: #474747;
+body, .side, .titlebox form.toggle, .leavemoderator, .icon-menu a, .side .spacer
+{
+  background: rgb(36, 34, 34);
 }
 
-.link { padding: 7px 7px 7px 15px;
+.link
+{
+  padding: 7px 7px 7px 15px;
 }
 
-body.listing-page .thing.link:hover { transition: .3s; background: #2C2D2D;
+body.listing-page .thing.link:hover
+{
+  transition: .3s;
+  background: rgb(68, 68, 68);
 }
 
-.side { padding-left: 5px; padding-right: 5px;
+.side
+{
+  padding-left: 5px;
+  padding-right: 5px;
 }
-
-
-
 
 .flair-west
 {
-    background-color: #111;
-    font-size: 1em;
-    font-weight: bold;
-    color: white;
-    border-color: #003561;
-    border-width: .3em;
-    border-radius: 2em;
-    padding: 0em .5em;
-    
+  background-color: rgb(36, 34, 34);
+  font-size: 1em;
+  font-weight: bold;
+  color: white;
+  border-color: #003561;
+  border-width: .3em;
+  border-radius: 2em;
+  padding: 0em .5em;
+
 }
 
 .flair-lawlor
 {
-    background-color: #111;
-    font-size: 1em;
-    font-weight: bold;
-    color: white;
-    border-color: #003561;
-    border-width: .3em;
-    border-radius: 2em;
-    padding: 0em .5em;
-    transition: transform 1s, color 2s;
+  background-color: rgb(36, 34, 34);
+  font-size: 1em;
+  font-weight: bold;
+  color: white;
+  border-color: #003561;
+  border-width: .3em;
+  border-radius: 2em;
+  padding: 0em .5em;
+  transition: transform 1s, color 2s;
 }
 
 .flair-stclair
 {
-    background-color: #111;
-    font-size: 1em;
-    font-weight: bold;
-    color: white;
-    border-color: #003561;
-    border-width: .3em;
-    border-radius: 2em;
-    padding: 0em .5em;
-    transition: transform 1s, color 2s;
+  background-color: rgb(36, 34, 34);
+  font-size: 1em;
+  font-weight: bold;
+  color: white;
+  border-color: #003561;
+  border-width: .3em;
+  border-radius: 2em;
+  padding: 0em .5em;
+  transition: transform 1s, color 2s;
 }
 
 .flair-hill
 {
-    background-color: #111;
-    font-size: 1em;
-    font-weight: bold;
-    color: white;
-    border-color: #003561;
-    border-width: .3em;
-    border-radius: 2em;
-    padding: 0em .5em;
-    transition: transform 1s, color 2s;
+  background-color: rgb(36, 34, 34);
+  font-size: 1em;
+  font-weight: bold;
+  color: white;
+  border-color: #003561;
+  border-width: .3em;
+  border-radius: 2em;
+  padding: 0em .5em;
+  transition: transform 1s, color 2s;
 }
 
+.morelink .nub
+{
+  display: none;
+}
 
-
-
-
-a {
+.tabmenu li a
+{
   text-decoration: none;
+  color: rgb(36, 34, 34);
+  padding: 2px 6px 0 6px;
+  background-color: #FFFFFF;
+}
+
+.tabmenu li.selected a
+{
+  color: #003963;
+  border: 1px solid #003963;
+}
+
+.titlebox h1 a
+{
   color: white;
 }
 
-.thing .title {
+.titlebox
+{
+  font-size: larger;
   color: white;
+}
+
+.titlebox form.toggle, .leavemoderator
+{
+  margin: 0;
+  padding: 5px 0px;
+  font-size: smaller;
+  color: white;
+}
+
+.side .md
+{
+  font-size: 1.3em;
+  line-height: 1.25em;
+  color: white;
+}
+
+.sidecontentbox .title h1
+{
+  display: inline;
+  text-transform: uppercase;
+  margin: 0;
+  color: white;
+  font-size: 130%;
+}
+
+.sidecontentbox .more a, .gadget small
+{
+  color: white;
+}
+
+.titlebox .bottom
+{
+  border-top: 1px solid gray;
+  padding-top: 2px;
+  font-size: 80%;
+  color: white;
+}
+
+.titlebox .bottom
+{
+  border-top: 1px solid white;
+}
+
+.thing .title
+{
+  color: rgb(235, 168, 27);
   outline: none;
   margin-right: .4em;
   padding: 0px;
   overflow: hidden;
 }
 
-
-
-.tabmenu li a {
-  text-decoration: none;
-  color: rgb(19, 19, 19);
-}
-
-.tabmenu li.selected a {
-  color: rgb(0, 51, 94);
-}
-
-
-
-.md {
-  max-width: 60em;
-  color: #808080;
-}
-
-.titlebox h1 a {
-  color: grey
-}
-
-.titlebox {
-  font-size: larger;
-  color: rgb(124, 128, 128);
-}
-
-
-
-.morelink .nub
+.thing .title:visited, .thing.visited .title
 {
-display: none;
+  color: #0075D5;
 }
-
-
-.side .md p {font-size: 1.3em;
-  line-height: 1.25em;
-}
-
-
 
 .expando-button {
   float: left;
   height: 23px;
   width: 23px;
   margin: 2px 5px 2px 0;
-  background: #131313 none no-repeat scroll center center;
+  background: #242222 none no-repeat scroll center center;
+}
+
+.link .score {
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.link .rank {
+  float: left;
+  margin-top: 15px;
+  color: #FFFFFF;
+  font-family: arial;
+  font-size: medium;
+  text-align: right;
 }
 
 
-
-.sidebox.create .morelink 
+.sidebox.create .morelink, .spacer > .sidebox.create > .spacer, .titlebox > .bottom > .flair.flair-west
 {
-    display: none;
+  display: none;
 }
 
-.spacer > .sidebox.create > .spacer
+.titlebox > .bottom, .titlebox > .bottom > a
 {
-    display: none;
+  color: rgb(36, 34, 34);
 }
 
-.titlebox > .bottom > .flair.flair-west
+.titlebox > .bottom > .age
 {
-    display: none;
+  color: white;
 }
 
-.titlebox > .bottom
-{
-    color: white;
+.domain a {
+  color: #FFF;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+  max-width: 19em;
 }
 
-.titlebox > .bottom > a
-{
-    color: white;
+.domain {
+  color: #FFF;
+  font-size: x-small;
+  white-space: nowrap;
 }
 
+.entry .buttons li a {
+  color: #FFF;
+  font-weight: bold;
+  padding: 0 1px;
+}
 
+.tagline {
+  color: #FFF;
+  font-size: x-small;
+}
 
-.side .md table {
-    margin: 5px 0px 0px;
-    width: 100%;
-    background: #F9F9F9 none repeat scroll 0% 0%;
-    border: 2px solid #EEE;
-    font-size: 9px;
+.leavemoderator {
+  margin: 0;
+  padding: 5px 0px;
+  font-size: 1em;
+  color: white;
+}
+
+.titlebox form.toggle, .leavemoderator {
+  margin: 0;
+  padding: 5px 0px;
+  font-size: 1em;
+  color: white;
 }
