--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,297 +1,262 @@
 .pagename a
 {
-  background: url(%%BannerImage1-3%%);
-  background-size: 100%;
-  position: absolute;
-  bottom: 0;
-  height: 100px!important;
-  left: 0;
-  right: 0;
-  float: left;
-  background-position: 15px;
-  z-index: 0;
+ background: url(%%BannerImage1-3%%);
+ background-size: 100%;
+ position: absolute;
+ bottom: 0;
+ height: 100px!important;
+ left: 0;
+ right: 0;
+ float: left;
+ background-position: 15px;
+ z-index: 0;
 }
 
 .redditname a
 {
-  text-indent: -9000px;
+ text-indent: -9000px;
 }
 
 .tabmenu
 {
-  display: inline;
-  float: left;
+ display: inline;
+ float: left;
 }
 
 #header-bottom-left
 {
-  height: 100px;
+ height: 100px;
 }
 
 #header-bottom-left .tabmenu
 {
-  position:absolute;
-  left: 500px;
-  bottom: 0;
-  display: inline;
+ position:absolute;
+ left: 500px;
+ bottom: 0;
+ display: inline;
 }
 
 #header-img.default-header
 {
-  position: absolute;
-  width: 30px!important;
-  left: .2em;
-  bottom: 0;
-  z-index: 1;
+ position: absolute;
+ width: 30px!important;
+ left: .2em;
+ bottom: 0;
+ z-index: 1;
 }
 
 div.side div.spacer:nth-of-type(3)
 {
-  background:url(%%CedarvilleUniversity%%) top center no-repeat;
-  padding: 210px 0 0;
-  margin-top: 10px;
+ background:url(%%CedarvilleUniversity%%) top center no-repeat;
+ padding: 210px 0 0;
+ margin-top: 10px;
 }
 
 div.RES-keyNav-activeElement, div.commentarea div.RES-keyNav-activeElement .md, div.commentarea div.RES-keyNav-activeElement.entry div.noncollapsed
 {
-  background: transparent none !important;
+ background: transparent none !important;
 }
 
 body, .side, .titlebox form.toggle, .leavemoderator, .icon-menu a, .side .spacer
 {
-  background: rgb(36, 34, 34);
+ background: rgb(36, 34, 34);
 }
 
 .link
 {
-  padding: 7px 7px 7px 15px;
+ padding: 7px 7px 7px 15px;
 }
 
 body.listing-page .thing.link:hover
 {
-  transition: .3s;
-  background: rgb(68, 68, 68);
+ transition: .3s;
+ background: rgb(68, 68, 68);
 }
 
 .side
 {
-  padding-left: 5px;
-  padding-right: 5px;
+ padding-left: 5px;
+ padding-right: 5px;
+}
+
+.flair-base
+{
+ font-weight: bold;
+ border-width: .3em;
+ border-radius: 2em;
+ padding: 0em .5em;
 }
 
 .flair-west
 {
-  background-color: rgb(36, 34, 34);
-  font-size: 1em;
-  font-weight: bold;
-  color: white;
-  border-color: #003561;
-  border-width: .3em;
-  border-radius: 2em;
-  padding: 0em .5em;
+ background-color: rgb(36, 34, 34);
+ color: white;
+ border-color: #003561;
 
 }
 
 .flair-lawlor
 {
-  background-color: rgb(36, 34, 34);
-  font-size: 1em;
-  font-weight: bold;
-  color: white;
-  border-color: #003561;
-  border-width: .3em;
-  border-radius: 2em;
-  padding: 0em .5em;
-  transition: transform 1s, color 2s;
+ background: linear-gradient(90deg, #f33, #ff3, #3f3, #33f);
+ color: white;
+ border-color: #003561;
 }
 
 .flair-stclair
 {
-  background-color: rgb(36, 34, 34);
-  font-size: 1em;
-  font-weight: bold;
-  color: white;
-  border-color: #003561;
-  border-width: .3em;
-  border-radius: 2em;
-  padding: 0em .5em;
-  transition: transform 1s, color 2s;
+ background-color: rgb(36, 34, 34);
+ color: white;
+ border-color: #003561;
 }
 
 .flair-hill
 {
-  background-color: rgb(36, 34, 34);
-  font-size: 1em;
-  font-weight: bold;
-  color: white;
-  border-color: #003561;
-  border-width: .3em;
-  border-radius: 2em;
-  padding: 0em .5em;
-  transition: transform 1s, color 2s;
+ background-color: rgb(36, 34, 34);
+ color: white;
+ border-color: #003561;
 }
 
 .morelink .nub
 {
-  display: none;
+ display: none;
 }
 
 .tabmenu li a
 {
-  text-decoration: none;
-  color: rgb(36, 34, 34);
-  padding: 2px 6px 0 6px;
-  background-color: #FFFFFF;
+ text-decoration: none;
+ color: rgb(36, 34, 34);
+ padding: 2px 6px 0 6px;
+ background-color: #FFFFFF;
 }
 
 .tabmenu li.selected a
 {
-  color: #003963;
-  border: 1px solid #003963;
+ color: #003963;
+ border: 1px solid #003963;
 }
 
 .titlebox h1 a
 {
-  color: white;
+ color: white;
 }
 
 .titlebox
 {
-  font-size: larger;
-  color: white;
-}
-
-.titlebox form.toggle, .leavemoderator
-{
-  margin: 0;
-  padding: 5px 0px;
-  font-size: smaller;
-  color: white;
+ font-size: larger;
+ color: white;
 }
 
 .side .md
 {
-  font-size: 1.3em;
-  line-height: 1.25em;
-  color: white;
+ font-size: 1.3em;
+ line-height: 1.25em;
+ color: white;
 }
 
 .sidecontentbox .title h1
 {
-  display: inline;
-  text-transform: uppercase;
-  margin: 0;
-  color: white;
-  font-size: 130%;
+ display: inline;
+ text-transform: uppercase;
+ margin: 0;
+ color: white;
+ font-size: 130%;
 }
 
 .sidecontentbox .more a, .gadget small
 {
-  color: white;
+ color: white;
 }
 
 .titlebox .bottom
 {
-  border-top: 1px solid gray;
-  padding-top: 2px;
-  font-size: 80%;
-  color: white;
-}
-
-.titlebox .bottom
-{
-  border-top: 1px solid white;
+ border-top: 1px solid white;
+ padding-top: 2px;
+ font-size: 80%;
+ color: white;
 }
 
 .thing .title
 {
-  color: rgb(235, 168, 27);
-  outline: none;
-  margin-right: .4em;
-  padding: 0px;
-  overflow: hidden;
+ color: rgb(235, 168, 27);
+ outline: none;
+ margin-right: .4em;
+ padding: 0px;
+ overflow: hidden;
 }
 
 .thing .title:visited, .thing.visited .title
 {
-  color: #0075D5;
+ color: #0075D5;
 }
 
 .expando-button {
-  float: left;
-  height: 23px;
-  width: 23px;
-  margin: 2px 5px 2px 0;
-  background: #242222 none no-repeat scroll center center;
+ float: left;
+ height: 23px;
+ width: 23px;
+ margin: 2px 5px 2px 0;
+ background: #242222 none no-repeat scroll center center;
 }
 
 .link .score {
-  text-align: center;
-  color: #FFFFFF;
+ text-align: center;
+ color: #FFFFFF;
 }
 
 .link .rank {
-  float: left;
-  margin-top: 15px;
-  color: #FFFFFF;
-  font-family: arial;
-  font-size: medium;
-  text-align: right;
+ float: left;
+ margin-top: 15px;
+ color: #FFFFFF;
+ font-family: arial;
+ font-size: medium;
+ text-align: right;
 }
 
 
 .sidebox.create .morelink, .spacer > .sidebox.create > .spacer, .titlebox > .bottom > .flair.flair-west
 {
-  display: none;
+ display: none;
 }
 
 .titlebox > .bottom, .titlebox > .bottom > a
 {
-  color: rgb(36, 34, 34);
+ color: rgb(36, 34, 34);
 }
 
 .titlebox > .bottom > .age
 {
-  color: white;
+ color: white;
 }
 
 .domain a {
-  color: #FFF;
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  vertical-align: middle;
-  max-width: 19em;
+ color: #FFF;
+ display: inline-block;
+ overflow: hidden;
+ white-space: nowrap;
+ text-overflow: ellipsis;
+ vertical-align: middle;
+ max-width: 19em;
 }
 
 .domain {
-  color: #FFF;
-  font-size: x-small;
-  white-space: nowrap;
+ color: #FFF;
+ font-size: x-small;
+ white-space: nowrap;
 }
 
 .entry .buttons li a {
-  color: #FFF;
-  font-weight: bold;
-  padding: 0 1px;
+ color: #FFF;
+ font-weight: bold;
+ padding: 0 1px;
 }
 
 .tagline {
-  color: #FFF;
-  font-size: x-small;
-}
-
-.leavemoderator {
-  margin: 0;
-  padding: 5px 0px;
-  font-size: 1em;
-  color: white;
+ color: #FFF;
+ font-size: x-small;
 }
 
 .titlebox form.toggle, .leavemoderator {
-  margin: 0;
-  padding: 5px 0px;
-  font-size: 1em;
-  color: white;
+ margin: 0;
+ padding: 5px 0px;
+ font-size: 1em;
+ color: white;
 }
